# recommendation-algorithms-explorer

./: README.md  package.json
api/: .flaskenv  dump.rdb  requirements.txt  setup.cfg  tox.ini
api/src/: __init__.py  api.py  celery_config.py  config.py  models.py  tasks.py  utils.py
api/src/Algorithms/: ItemKNN.py  Popularity.py  Recency.py  algorithm.py
api/src/TestData/: csv_script.py
api/src/TestData/H_M/: README.md
doc/: database_design.txt  tussentijds rapport 1.tex
doc/week1/: main.tex
doc/week2/: main.tex
doc/week3/: Verslag Team 5 Week 3.tex
doc/week4/: main.aux  main.out  main.tex  main.toc
doc/week8/: week8.tex
doc/week9/: week9.tex
public/: index.html  manifest.json
src/: App.js  setupProxy.js
src/components/: index.js
src/components/card/: CardComponent.css  CardComponent.js  CardComponentBox.js  DataSetCard.css  DatasetCard.js  ItemCard.css  ItemCard.js  UserCard.css  UserCard.js
src/components/date/: DatePicker.js  IntervalPicker.js
src/components/sidebar/: Sidebar.css  Sidebar.js  SidebarItem.js  SidebarMenu.js
src/components/table/: Table.js
src/components/topbar/: Topbar.css  Topbar.js
src/layout/: DashboardLayout.css  DashboardLayout.js
src/pages/: index.js
src/pages/404/: Page404.css  Page404.js
src/pages/ABtest/: CreateABTest.js  DetailedABTest.css  RenderABTest.css  RenderABTest.js
src/pages/catalog/: Catalogus.css  Catalogus.js  product_card.js
src/pages/datasets/: Graph_BAR.js  (+6 more)
src/routes/: Routes.js
src/utils/: PrettyNumbers.js  SMA.js  ValidUrl.js  renderParams.js  storageSystem.js  useAxios.js
(+23 files in other folders)
