[metadata]
name = ppdb
description = An web interface for comparing recommendation algorithms
author = Robbe Nooyens, Cedric eclair, Pablo Deputter, Elias Dams, Robin Dillen
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
;packages =
;    src
install_requires =
    Flask~=2.0.3
    numpy~=1.22.2
    pandas~=1.4.1
    python-dotenv~=0.19.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.930
    flake8>=4.0
    tox>=3.24

[options.package_data]
src = py.typed

[flake8]
max-line-length = 160